--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,20 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  equatable: ^2.0.5
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  get_it: ^7.3.0
   pin_code_fields: ^7.4.0
+  shared_preferences: ^2.1.0
+  firebase_messaging: ^14.4.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -22,5 +30,8 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
+  # To add assets to your application, add an assets section, like this:
+  assets:
+    - lang/ar.json
+    - lang/en.json
